fixed overflow, managed create-area closure

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* overflow-x: none; */
+  overflow-x: hidden;
 }
 html {
   font-family: "Montserrat", sans-serif;
@@ -70,6 +70,7 @@ footer p {
 }
 
 form.create-note {
+  overflow-x: visible;
   position: relative;
   width: 480px;
   margin: 30px auto 20px auto;
@@ -92,6 +93,7 @@ form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
+  z-index: 10;
   background: #f5ba13;
   color: #fff;
   border: none;
